--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,10 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
 title: Your awesome title
 email: info@flock.company
+address: "CityLoft 25
+Jalan blabla"
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -25,7 +22,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 instagram_username: jekyllrb
 facebook_username:  jekyll
-
+google_analytics: "abs"
 # Build settings
 markdown: kramdown
 theme: flock
